devops/manifest/service.yml
kind: Service
apiVersion: v1
metadata:
  name: web-service
spec:
  clusterIP: None
  selector:
    run: web-service
  ports:
    - name: port1
      protocol: TCP
      port: 8000
      targetPort: 8000
