devops/manifest/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: mysite.com
    http:
      paths:
      - backend:
          serviceName: web-service
          servicePort: 8000
        path: /
